--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -11,13 +11,10 @@
 		"nodejs_compat",
 		"global_fetch_strictly_public"
 	],
-	"assets": {
-		"binding": "ASSET",
-		"directory": "./dist"
-	},
 	"observability": {
 		"enabled": true
-	}
+	},
+	"vars": { "PUBLIC_TEAMUP_CALENDAR_ID": "kspjdxwyx9wogyy5a7" }
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
@@ -33,7 +30,6 @@
 	 * Environment Variables
 	 * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
 	 */
-	// "vars": { "MY_VARIABLE": "production_value" }
 	/**
 	 * Note: Use secrets to store sensitive data.
 	 * https://developers.cloudflare.com/workers/configuration/secrets/
